Fixed spacing issues in deliverables sections

--- a/css/templatemo-nomad-force.css
+++ b/css/templatemo-nomad-force.css
@@ -754,3 +754,12 @@ strong {
   }
 }
 
+/*---------------------------------------
+  OTHER
+-----------------------------------------*/
+.image-space {
+  width: 20px; 
+  height: 100%; 
+  display: inline-block;
+}
+
